--- a/home.html
+++ b/home.html
@@ -1,10 +1,13 @@
 <html>
 	<head>
-		<title>Home/title>
+		<title>Home</title>
+		<link rel = "stylesheet" href="home.css">
 	</head>
 	<body>
-		<h1>home<h1>
-		<input type="text" id ="Url" value ="Enter the Url"/>
-	</body>
+		<h1>Youtube to Mp3 Conveter<h1>
+		<div>
+			<input type="text" id ="Url" value="Enter the Url"/>
+		</div>
+		</body>
 </html>
 			
