--- a/home.html
+++ b/home.html
@@ -4,10 +4,15 @@
 		<link rel = "stylesheet" href="home.css">
 	</head>
 	<body>
+		<div class="text">
 		<h1>Youtube to Mp3 Conveter<h1>
-		<div>
-			<input type="text" id ="Url" value="Enter the Url"/>
 		</div>
+
+		<div class="value">
+			<input type="text" value="Enter the Url"/>
+			<button class="btn">Click here</button>
+		</div>
+
 		</body>
 </html>
 			
