--- a/home.html
+++ b/home.html
@@ -8,9 +8,9 @@
 		<h1>Youtube to Mp3 Conveter<h1>
 		</div>
 
-		<div class="value">
-			<input type="text" value="Enter the Url"/>
-			<button class="btn">Click here</button>
+		<div class="inp">
+			<a class="value"><input type="text" value="Enter the Url"/></a>
+			<input type="button" class="btn" value="Click">
 		</div>
 
 		</body>
