--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 
 		<div class="inp">
 			<a class="value"><input type="text" value="Enter the Url"/></a>
-			<input type="button" class="btn" value="Click">
+			<a><input type="button" class="btn" value="Click"></a>
 		</div>
 
 		</body>
