changing search styles

--- a/home.html
+++ b/home.html
@@ -7,9 +7,11 @@
 		<div class="text">
 		<h1>Youtube to Mp3 Conveter<h1>
 		</div>
-
+		<div>
+			<input type="text" value="Enter the Url"/>
+		</div>
 		<div class="inp">
-			<a class="value"><input type="text" value="Enter the Url"/></a>
+			
 			<a><input type="button" class="btn" value="Click"></a>
 		</div>
 
