--- a/home.html
+++ b/home.html
@@ -7,13 +7,17 @@
 		<div class="text">
 		<h1>Youtube to Mp3 Conveter<h1>
 		</div>
-		<div>
+		<center>
+		<div class="input">
 			<input type="text" value="Enter the Url"/>
 		</div>
+	</center>
+		<center>
 		<div class="inp">
 			
 			<a><input type="button" class="btn" value="Click"></a>
 		</div>
+		</center>
 
 		</body>
 </html>
